Cuerpo de la página

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body>
     <section class="hero is-primary is-medium">
         <div class="hero-head">
-            <header class="nav">
+
+            <header class="nav"> <!-- Barra de navegacion -->
                 <div class="container">
-                    <div class="nav-left">
+
+                    <div class="nav-left"><!-- elementos  a la izquierda -->
                         <a href="#" class="nav-item">
-                            <img src="asset/img/imagen.jpg" class="logo" alt="Rimorsoft Online">
+                            <img src="asset/img/photo.jpg" class="logo" alt="Rimorsoft Online">
                         </a>
-                    </div>
-                    <div class="nav-right nav-menu">
+                    </div><!-- fin de elementos  a la izquierda -->
+
+                    <div class="nav-right nav-menu"><!-- elementos a la derecha -->
                         <a href="http://github.com/italomoralesf" target="_blank" class="nav-item">Github</a>
                         <a href="http://twitter.com/italomoralesf" target="_blank" class="nav-item">Twitter</a>
                         <a href="http://instagram.com/italomoralesf" target="_blank" class="nav-item">Instagram</a>
@@ -28,14 +31,24 @@
                         <span class="nav-item">
                             <a href="http://youtube.com/rimorsoft" target="_blank" class="button is-primary is-inverted">
                                 <span class="icon"><i class="fa fa-youtube"></i></span>
-                                <span>Youtube</span>
+                                <span>Youtube</span><!-- fin de elementos a la derecha -->
                             </a>
                         </span>
                     </div>
+
                 </div>
-            </header>
+            </header> <!-- fin de la barra de navegación -->
+        </div>
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title">Trailer de Rimorsoft Online</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vXtOtNJCw78" frameborder="0" allowfullscreen></iframe>
+                <div>
+                    <script src="https://apis.google.com/js/platform.js"></script>
+                    <div class="g-ytsubscribe" data-channel="rimorsoft" data-layout="full" data-theme="dark" data-count="default"></div>
+                </div>
+            </div>
         </div>
     </section>
-    Me la pela con un pelador verde
 </body>
 </html>
