--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <div class="container has-text-centered">
                 <h1 class="title">Trailer de Rimorsoft Online</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/vXtOtNJCw78" frameborder="0" allowfullscreen></iframe>
-                <div class="g-ytsubscribe" data-channel="rimorsoft" data-layout="full" data-theme="dark" data-count="default"></div>
+                <div>
+                    <div class="g-ytsubscribe" data-channel="rimorsoft" data-layout="full" data-theme="dark" data-count="default"></div>
+                </div>
             </div>
         </div>
     </section>
